--- a/Mta/d4.html
+++ b/Mta/d4.html
@@ -30,5 +30,9 @@
       quan tốt, Đảng viên mẫu mực" của Học viện đặt ra và mục tiêu " Trung úy ra
       trường, kiến thức vào đầu" của tôi sắp chờ ngày hái quả.<br />
     </p>
+    <p>Tuy nhiên, với 1 chuyên ngành không hot và mức lương là quá thấp so với ước mơ xây nhà. Quá trình tìm hiểu, tôi bắt đầu mày mò lập trình, ở đây là xây dựng Web. <br>
+    Không biết là quá trình này có cho quả ngọt hay không, nhưng hãy cố gắng hết mình Minh Thiên nhé.<hr>
+    
+    </p>
   </body>
 </html>
