2. sửa lại tên tệp

--- a/Arsenal/ars.html
+++ b/Arsenal/ars.html
@@ -6,7 +6,7 @@
     <title>Đội bóng của tôi</title>
   </head>
   <body>
-    <a href="../trangchu/mt.html">Home</a>
+    <a href="../trangchu/index.html">Home</a>
     <a href="../Mta/d4.html">Mta</a>
     <h1>Arsenal Football Club</h1>
     <img
