--- a/Mta/d4.html
+++ b/Mta/d4.html
@@ -6,7 +6,7 @@
     <title>Mta cua toi</title>
   </head>
   <body>
-    <a href="../trangchu/mt.html">Home</a>
+    <a href="../trangchu/index.html">Home</a>
     <a href="../Arsenal/ars.html">Arsenal</a>
     <h1>Học viện Kỹ thuật Quân sự</h1>
     <img
